# sdk-nrf

./: CODEOWNERS  west.yml
applications/nrf_desktop/: bootloader_dfu.rst
boards/nordic/nrf54lv10dk/: Kconfig  Kconfig.nrf54lv10dk  board.yml  nrf54lv10a_cpuapp_common.dtsi  nrf54lv10dk_nrf54lv10a-common.dtsi  nrf54lv10dk_nrf54lv10a_cpuapp.dts  nrf54lv10dk_nrf54lv10a_cpuapp_ns.dts  nrf54lv10dk_nrf54lv10a_cpuapp_ns.yaml
cmake/sysbuild/: b0_mcuboot_signing.cmake  image_signing.cmake  partition_manager.cmake  sign.cmake
drivers/: CMakeLists.txt
modules/mcuboot/: flash_sim_ns.overlay
modules/openthread/: Kconfig.features.nrf
modules/trusted-firmware-m/: CMakeLists.txt  Kconfig  Kconfig.tfm.defconfig  Kconfig.tfm.pm
samples/bootloader/: app_test_nrf52.overlay
samples/tfm/adac/: CMakeLists.txt  prj.conf  sample.yaml  tfm_config.cmake
samples/tfm/adac/output/: adac_keys.json  private-key-gen1.pem  private-key-gen2.pem  private-key-gen3.pem  private-key.pem  public-key-gen1.pem  public-key-gen2.pem  public-key-gen3.pem  public-key.pem
samples/tfm/adac/scripts/: README.md  adac_cert.py  adac_host.py  adac_provision.py  test_adac_reset.py
samples/tfm/adac/scripts/output/: adac_keys.json  msg.txt  msg.txt.sig  private-key-gen1.pem  private-key-gen2.pem  private-key-gen3.pem  private-key.pem  public-key-gen1.pem  public-key-gen2.pem  public-key-gen3.pem  public-key.pem
samples/tfm/adac/src/: main.c
samples/tfm/manufacturing_application/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml  sysbuild.conf
samples/tfm/manufacturing_application/boards/: nrf54lv10dk_nrf54lv10a_cpuapp_ns.conf
samples/tfm/manufacturing_application/cmake/: keys.cmake  pem_to_c.py
samples/tfm/manufacturing_application/keys/: urot_pubkey_gen0.pem  urot_pubkey_gen1.pem
samples/tfm/manufacturing_application/src/: asset_provisioning.c  asset_provisioning.h  erase_protection.c  erase_protection.h  huk_provisioning.c  huk_provisioning.h  ikg_check.c  ikg_check.h  image_validation.c  image_validation.h  key_provisioning.c  key_provisioning.h  lcs.c  lcs.h  main.c  mfg_log.h  product_tests.c  product_tests.h  recovery.c  recovery.h
scripts/: adac_rotpk.json
scripts/bootloader/: validation_data.py
snippets/nrf91-modem-trace-uart/: modem-trace-uart-nrf91.overlay
soc/nordic/nrf54l/: CMakeLists.txt
subsys/bootloader/: Kconfig
subsys/partition_manager/: CMakeLists.txt  pm.yml.secure_boot_storage
subsys/pcd/src/: pcd.c
sysbuild/: CMakeLists.txt  secureboot.cmake
tests/psa_crypto/: prj.conf  testcase.yaml
(+182 files in other folders)
